@@ -28,6 +28,7 @@ Date: 2024-12-08
     - Added 2 new types of beacons unlocked at AEM science, hub and proximity beacons. Hub beacons are wide and large beacons that can handle a lot of modules, but have a low distribution range. Proximity beacons are the opposite.
     - Added the Haber-Bosch process for ammonia, unlocked at metalloid packs.
     - Added an advanced processing chain for iron, copper, nickel, zinc and manganese. The chunk ores have a 1:6 chunk to ore ratio compared to 1:2.
+    - Ammonia can now be burned in a burn-inator.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
